@@ -11,6 +11,8 @@ import java.util.List;
  * <li>(JDK8 以前)-XX:PermSize=10m -XX:MaxPermSize=10m</li>
  * <li>(JDK8 及以后)-XX:MetaspaceSize=10m -XX:MaxMetaspaceSize=10m</li>
  * </ul>
+ * <p>
+ * Linux Test Cli: java -verbose:gc -XX:PermSize=10m -XX:MaxPermSize=10m -cp target/javacore-jvm-1.0.1.jar io.github.dunwu.javacore.jvm.memory.ConstantPoolOutOfMemoryDemo
  *
  * @author <a href="mailto:forbreak@163.com">Zhang Peng</a>
  * @since 2019-06-25
